<resources>
    <string name="app_name" translatable="false">FreeTamilEbooks</string>
    <string name="title_home">முகப்பு</string>
    <string name="title_downloads">பதிவிறக்கங்கள்</string>
    <string name="title_settings">அமைப்புகள்</string>
    <string name="title_dashboard">தகவல் பலகை</string>

    <string name="about_us">எங்களை பற்றி</string>
    <string name="contributors">பங்களிப்பாளர்கள்</string>
    <string name="publish_books">படைப்புகளை வெளியிட</string>
    <string name="feedback">கருத்துக்களுக்கு</string>
    <string name="settings">அமைப்புகள்</string>
    <string name="search">தேடு</string>
    <string name="push_notification">புது மின்னூல் அறிவிப்புகள்</string>
    <string name="on">வேண்டும்</string>
    <string name="off">வேண்டாம்</string>

    <string name="order_type">புத்தக பட்டியல் முறை</string>
    <string name="random">இயல்பான</string>
    <string name="new_first">புதியவை முதலில்</string>
    <string name="by_category">பிரிவுகளாக</string>
    <string name="home_fragment" translatable="false">HomeFragment</string>
    <string name="press_back_again">வெளியேற மீண்டும் அழுத்தவும்</string>
    <string name="connected_to_internet">இணையத்துடன் இணைக்கப்பட்டுள்ளது</string>
    <string name="no_internet">மன்னிக்கவும்! இணையத்துடன் இணைக்கப்படவில்லை</string>
    <string name="name">பெயர்</string>
    <string name="email">மின்னஞ்சல்</string>
    <string name="comments">கருத்து</string>
    <string name="submit">சமர்ப்பி</string>
    <string name="cancel">ரத்துசெய்</string>
    <string name="thanks_comments">கருத்துக்களுக்கு நன்றி!!!</string>
    <string name="pls_wait">காத்திருக்கவும்…</string>
    <string name="download_msg_rationale">கோப்பை சேமித்து பயன்படுத்த, சாதனத்தின் நினைவகத்தை உபயோகிக்க உங்கள் அனுமதி
        வேண்டும்.
    </string>

    <string name="downloading">பதிவிறக்குகிறது…</string>
    <string name="download_finished">பதிவிறக்கம் முடிந்தது</string>

    <string name="filter_titer">தலைப்பு</string>

    <string name="downloads">பதிவிறக்கங்கள்</string>
    <string name="no_downloads">பதிவிறக்கங்கள் எதுவும்\nகாணப்படவில்லை.</string>
    <string name="open_sources">மூன்றாம் தரப்பு நூலகங்கள்</string>
    <string name="book_by_mariyani_from_the_noun_project">
        Logo Credits:\nThis file is licensed under the Creative Commons Attribution 4.0 International license.\nBook by Mariyani from the Noun Project
    </string>
    <string name="search_for_books_authors">புத்தகம்/ஆசிரியர் பெயரில் தேடவும்…</string>
    <string name="try_again_later">சிறிது நேரம் கழித்து முயற்சிக்கவும்…</string>
    <string name="source_code">மூல நிரல்</string>
    <string name="shapre_app">செயலியை பகிரவும்</string>
    <string name="version">பதிப்பு : %s</string>
    <string name="wait">Wait…</string>
    <string name="read">Read</string>
    <string name="download">Download</string>
    <string name="loading">Loading…</string>
    <string name="book_writers">நூலாசிரியர்கள்</string>
    <string name="share_app">செயலியை பகிரவும்</string>
    <string name="share_text">FreeTamilEbooks செயலிமூலம் 500க்கும் மேற்பட்ட மின்நூல்களை இலவசமாக தரவிறக்கி படிக்கலாம்.\n%s</string>
    <string name="privacy_policy">தனியுரிமைக் கொள்கை</string>
    <string name="powered_by">Powered by</string>
    <string name="kaniyam_foundation">கணியம் அறக்கட்டளை</string>
    <string name="kaniyam_foundation_desc"><![CDATA[<p><b>தொலை நோக்கு – Vision</b><br>தமிழ் மொழி மற்றும் இனக்குழுக்கள் சார்ந்த மெய்நிகர்வளங்கள், கருவிகள் மற்றும் அறிவுத்தொகுதிகள், அனைவருக்கும்  கட்டற்ற அணுக்கத்தில் கிடைக்கும் சூழல்
<br><b>பணி இலக்கு  – Mission</b><br>அறிவியல் மற்றும் சமூகப் பொருளாதார வளர்ச்சிக்கு ஒப்ப, தமிழ் மொழியின் பயன்பாடு வளர்வதை உறுதிப்படுத்துவதும், அனைத்து அறிவுத் தொகுதிகளும், வளங்களும் கட்டற்ற அணுக்கத்தில் அனைவருக்கும் கிடைக்கச்செய்தலும்.<br>
<a>https://kaniyam.com</a></p>]]></string>
    <string name="vglug_foundation">VGLUG அறக்கட்டளை</string>
    <string name="vglug_foundation_desc"><![CDATA[<p>விழுப்புரம் குனு/லினக்ஸ் பயனர்கள் குழு (VGLUG) என்பது 2013 ஆம் ஆண்டில் தொடங்கப்பட்ட ஒரு இலாப நோக்கற்ற அமைப்பாகும். இந்த அமைப்பு ஒரு சமூக இயக்கமாகும். இது கட்டற்ற மென்பொருள் தத்துவத்தின் சாரத்துடன் அறிவியல் மற்றும் சமூகப் பொருளாதார வளர்ச்சிக்கு ஏற்ப FOSS தத்துவத்தினை மக்களிடையே கொண்டு சேர்க்கும் வேலையை செய்துவருகிறது.
    <br>
<a>https://vglug.org</a></p>]]></string>
    <string name="send">Send</string>
    <string name="no_books_found">இந்த தலைப்பில் புத்தகங்கள் எதுவும் கிடைக்கவில்லை…</string>

    <string name="new_rate_dialog_title">Rate this app</string>
    <string name="new_rate_dialog_message">If you like this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="new_rate_dialog_ok">Rate Now</string>
    <string name="new_rate_dialog_later">Later</string>
    <string name="new_rate_dialog_never">Never</string>

    <string name="cc_declaration">All books listed here are CC by license.\n\nஇங்கு பட்டியலிடப்பட்டுள்ள அனைத்து புத்தகங்களும் CC by உரிமத்தில் உள்ளவை.</string>
</resources>
