<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/menuAbout"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_us"/>
        <item
                android:id="@+id/menuContribute"
                android:icon="@drawable/ic_people_outline_black_24dp"
                android:title="@string/contributors"/>
        <item
                android:id="@+id/menuPublish"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/publish_books"/>
        <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_outline_settings_24px"
                android:title="@string/settings"/>
        <item
                android:id="@+id/menuFeedBack"
                android:icon="@drawable/ic_feedback_white_24dp"
                android:title="@string/feedback"/>
        <item
                android:id="@+id/menuOssLicence"
                android:icon="@drawable/ic_list_black_24dp"
                android:title="@string/open_sources"/>
    </group>
</menu>