<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/margin_5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rlPushLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/txtPushLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_notification"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/txtPushStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swPush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_separater_height" />

    <LinearLayout
        android:id="@+id/rlOSSLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtLabelOSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_sources"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_separater_height" />

    <LinearLayout
        android:id="@+id/rlSourceCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtLabelSourceCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_code"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_separater_height" />

    <TextView
        android:id="@+id/txtAppVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />
</LinearLayout>