<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                android:background="@android:color/transparent"
                app:title="@string/feedback"
                app:titleTextColor="@color/colorAccent1"
                android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView android:layout_width="45dp"
                           android:id="@+id/ivSend"
                           android:layout_alignParentEnd="true"
                           android:background="?attr/selectableItemBackgroundBorderless"
                           android:scaleType="centerInside"
                           android:src="@drawable/ic_send_black_24dp"
                           android:layout_height="match_parent"
                           android:contentDescription="@string/submit"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/name"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintTextColor="@color/colorAccent1"
                app:boxBackgroundColor="@color/colorPrimary"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:hintTextColor="@color/colorAccent1"
                app:boxBackgroundColor="@color/colorPrimary"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:textCursorDrawable="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/comments"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:counterTextColor="@color/colorAccent"
                app:counterOverflowTextColor="@color/colorAccent1"
                app:hintTextColor="@color/colorAccent1"
                app:boxBackgroundColor="@color/colorPrimary"
                android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtComments"
                    android:maxLines="10"
                    android:textCursorDrawable="@null"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>