<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvAboutUs"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="#8D6E63"
            app:cardCornerRadius="@dimen/margin_5dp"
            app:cardElevation="@dimen/margin_5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/margin_45dp"
                    android:minHeight="@dimen/margin_45dp"
                    app:srcCompat="@drawable/ic_info_outline_black_24dp"
                    app:tint="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_5dp"
                    android:text="@string/about_us"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvContributors"
            android:layout_width="@dimen/margin_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="#7e3ff2"
            app:cardCornerRadius="@dimen/margin_5dp"
            app:cardElevation="@dimen/margin_5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/margin_45dp"
                    android:minHeight="@dimen/margin_45dp"
                    app:srcCompat="@drawable/ic_people_outline_black_24dp"
                    app:tint="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_5dp"
                    android:text="@string/contributors"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvReleaseBooks"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        app:cardBackgroundColor="#546E7A"
        app:cardCornerRadius="@dimen/margin_5dp"
        app:cardElevation="@dimen/margin_5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/margin_45dp"
                android:minHeight="@dimen/margin_45dp"
                app:srcCompat="@drawable/ic_help_outline_black_24dp"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_5dp"
                android:text="@string/publish_books"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvComments"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        app:cardBackgroundColor="#D81B60"
        app:cardCornerRadius="@dimen/margin_5dp"
        app:cardElevation="@dimen/margin_5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcvReleaseBooks">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/margin_45dp"
                android:minHeight="@dimen/margin_45dp"
                app:srcCompat="@drawable/ic_feedback_white_24dp"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin_5dp"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>